--- a/plugins-test-pod.yaml
+++ b/plugins-test-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: POD_NAME
+  name: python-plugin-test
   namespace: plugin-registry-test
 spec:
   volumes:
@@ -32,11 +32,11 @@ spec:
         - name: TEST_SUITE
           value: test-plugin
         - name: USERSTORY
-          value: TEST_USERSTORY
+          value: PythonPlugin
         - name: NODE_TLS_REJECT_UNAUTHORIZED
           value: '0'
         - name: TS_SELENIUM_BASE_URL
-          value: CHE_URL
+          value: http://che-eclipse-che.apps.ocp47.crw-qe.com
         - name: TS_SELENIUM_LOG_LEVEL
           value: DEBUG
         - name: TS_SELENIUM_MULTIUSER
